--- a/main.tex
+++ b/main.tex
@@ -191,8 +191,7 @@ the mono-electronic operator:
 \label{eq:monoElectronicOperator}
 \hat{h}(i) = -\frac{1}{2}\Delta_i - \frac{(Z-Z_c)}{r_i}+\hat{V}(i) + \hat{\sigma}(i)
 \end{equation}
-where
-$\Delta_i$ is the Laplacian of the coordinates of electron $i$, and 
+where $\Delta_i$ is the Laplacian of the coordinates of electron $i$, and 
 $Z_C$ is the number of core electrons withdrawn from the reference system.
 The operator $\hat{\sigma}(i)$ is the 'no-collapse' term that prevents active electrons
 collapsing into the dormant region. The operator $\hat{V}(i)$ reproduces the 
@@ -320,11 +319,11 @@ The multi-centered pseudo-potentials that we build read as follows:
 \right]
 \end{equation}
 with $Y_{0,0}$ the $s$ spherical harmonic, $Y_{1,m}$ the $p$ spherical harmonics (the sum over $m$
-is not written explicitly to improve readability) and $r^0_J$, the relative fixed position of the $J^{th}$
+is not written explicitly to improve readability) and $r^0_J$ the relative fixed position of the $J^{th}$
 potential with respect to the origin of the pseudo-atom, which carries the pseudo-potentials.
 By analogy with Huzinaga model potentials defined in (\ref{eq:HuzinagaMPVersion1Potential})
-we can say that the $p$ projectors aim at mimicking a coulombic interaction,
-while the $s$ potentials have the task of recovering part of the bielectronic interaction
+we can say that the $p$ projectors aim to mimic a coulombic interaction,
+while the $s$ potentials have the task of recovering part of the bi-electronic interaction
 between the dormant and the active electrons.
 Thus, this second term is not stricly equivalent to Huzinaga's $B_J$ terms as they aim at recovering
 the bi-eletronic interactions and the no-collapse term.
@@ -332,7 +331,7 @@ This later role was devoted to the $\hat{\sigma}$ operator in Huzinaga's formula
 
 As will be discussed in the following sections,
 the \(p\) pseudo-potential allows to reproduce atomic properties, when the
-\(s\)-potentials mimic electrostatic electron pair repulsion. The pseudo-potentials are monoelectronic operators, thus they shall not be able to reproduce fully bielectronic interactions. Knowing this, we adjust the parameters of the \(s\)-potentials for the pseudo-system to have a wavefunction in which properties are as close as possible to those of the reference system, such as spatial extent, energy and excitation energies.
+\(s\)-potentials mimic electrostatic electron pair repulsion. The pseudo-potentials are mono-electronic operators, thus they shall not be able to reproduce fully bi-electronic interactions. Knowing this, we adjust the parameters of the \(s\)-potentials for the pseudo-system to have a wavefunction in which properties, such as spatial extent, energy and excitation energies, are as close as possible to those of the reference system.
 
 \begin{figure}[ht]
 \includegraphics[width=8cm]{ch3.png}
@@ -386,7 +385,7 @@ Next, we need to find a value for \( \langle r \rangle \). We can do this by cal
 %% where \(\lambda\) are the Symmetrised Atomic Orbital Shells taken from the molecular orbital files of a reference calculation of a CH\(^{\bullet}_{3}\) %% radical, and B is the matrix of \(\langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle\) values, appropriately normalised and contracted according to the basis %% set used (in this case, def-SV(P) \cite{defsvp}).
 %%
 
- where \(\psi_{p_{z}}\) are the \(p\) orbitals extracted from a reference calculation of CH\(_{3}\). From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). Even if we shall use the semi-local pseudo-potential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
+ where \(\psi_{p_{z}}\) are the molecular orbitals extracted from a reference calculation of CH\(^{\bullet}_{3}\). From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). Even if we shall use the semi-local pseudo-potential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
 \begin{equation}
 S = \langle \phi_{p_{z}} | \chi \rangle
 \end{equation}
@@ -505,9 +504,7 @@ Next, we take some of these potentials to create a pseudo-ethene system, with th
 %\end{table}
 
 \begin{table}[ht]
-\caption{Reference values and optimised values for Pseudo-ethene using only \(s\)-potentials with an exponent of 10.0.
-$d$ (a.u.) as defined in Figure~\ref{figure:ref_pseudo_diagram}. The Pseudo-ethene is optimised to give 
-the all-electron HOMO reference energy of  -10.537~eV (HF) and -6.726~eV (PBE0).}
+\caption{Reference values and optimised values for pseudo-ethene using only \(s\)-potentials with an exponent of 10.0. The pseudo-ethene is optimised to give the all-electron HOMO reference energies in Table \ref{table:ethene_s_pseudo}.}
 \begin{tabular}{c c c c}
 \hline
 %\multicolumn{3}{c}{Reference} \\
@@ -532,31 +529,17 @@ PBE0     & 0.5 &-7.679  & -8.447 \\
 \label{table:ethene_s_pseudo}
 \end{table}
 
-The next step adds a \(p\)-potential centred on the pseudo-carbon, with Table \ref{table:p_potentials} displaying the results. As before, \(d = 0.5\) a.u.. The \(p_{z}\) potential is selected using the procedure described in Section \ref{section:potential_derivation}, with the exponent chosen to give the maximum possible overlap with the \(p_{z}\) orbital, and the matching \(Z_{eff}\) coefficient calculated from the exponent and overlap. The \(s\)-potentials are then optimised once more to give the correct HOMO energy for CH\(^{\bullet}_{3}\). We again take these potentials to create a pseudo-ethene molecule, with the results shown in Table \ref{table:p_potentials}. We can see that these potentials seem to transfer more effectively from the CH\(^{\bullet}_{3}\) system to the ethene, suggesting therefore that whilst the \(s\)-potentials can affect both the \(p_{z}\) and \(\pi\) orbitals, they cannot alone represent the relationship between them.
-
-Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system. Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ethene_excitations}. Testing the relevant energies for the pseudo-systems, the early results are not promising, as we can see from Table \ref{table:ethene_excitations}. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Table \ref{table:ethene_excitations} shows our optimal result, chosen to give HOMO, excitation and ionisation energies closest to the reference values. 
+The next step adds a \(p\)-potential centred on the pseudo-carbon, with Table \ref{table:p_potentials} displaying the results. As before, \(d = 0.5\) a.u.. The \(p_{z}\) potential is selected using the procedure described in Section \ref{section:potential_derivation}, with the exponent chosen to give the maximum possible overlap with the \(p_{z}\) orbital, and the matching \(Z_{eff}\) coefficient calculated from the exponent and overlap. The \(s\)-potentials are then optimised once more to give the correct HOMO energy for CH\(^{\bullet}_{3}\). We again take these potentials to create a pseudo-ethene molecule, with the results shown in Table \ref{table:p_potentials}. We can see that these potentials seem to transfer more effectively from the CH\(^{\bullet}_{3}\) system to the ethene, suggesting therefore that whilst the \(s\)-potentials can affect both the \(p_{z}\) and \(\pi\) orbitals, they 
+cannot alone describe the relationship between them.
 
 \begin{table}[ht]
-\caption{Optimised s-orbital pseudo-potentials for pseudo-CH\(^{\bullet}_{3}\) and pseudo-ethene. \(d = 0.5\) a.u. The Pseudo-ethene is optimised to give the all-electron HOMO reference energy of  -10.537~eV (HF) and -6.726~eV (PBE0).}
+\caption{Optimised \(s\)-orbital pseudo-potentials for pseudo-CH\(^{\bullet}_{3}\) and pseudo-ethene. \(d = 0.5\) a.u. The pseudo-ethene is optimised to give the all-electron HOMO reference energies in Table \ref{table:ethene_s_pseudo}.}
 \begin{tabular}{c c c c}
 \hline
 & \(p\) coefficient & \(p\) exponent \\
 \hline
 \(p_{z}\) potential & -3.267 & 0.295 \\
-%\hline
-%Calculation Type & \(s\) coefficient & \(s\) exponent &  \\
-%\hline
-%\multicolumn{3}{c}{CH\(^{\bullet}_{3}\)} \\
-%\hline\hline
-%HF & 2.772 & 1.0 &  \\
-% & 6.173 & 5.0 &  \\
-% & 10.381 & 10.0 &  \\
-%\hline
-%PBE0 & 3.483 & 1.0 &  \\
-% & 9.801 & 5.0 &  \\
-% & 18.351 & 10.0 &  \\
 \hline
-%\multicolumn{3}{c}{Ethene} & \(\pi\) orbital energy (eV) \\
 Calculation Type & \(s\) coefficient & \(s\) exponent & \(\pi\) \\
 \hline\hline
 HF & 2.772 & 1.0 & -13.654 \\
@@ -571,6 +554,8 @@ PBE0 & 3.483 & 1.0 & -10.325 \\
 \label{table:p_potentials}
 \end{table}
 
+Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system. Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ethene_excitations}. Testing the relevant energies for the optimised pseudo-systems above, we can see from Table \ref{table:ethene_excitations} that the early results are not promising. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Table \ref{table:ethene_excitations} shows our optimal result, chosen to give HOMO, excitation and ionisation energies closest to the reference values. 
+
 \begin{table}[ht]
 \caption{\(s\)-potential fits to ethene \(\pi-\pi*\) excitation}
 \begin{tabular}{c c c c c}
@@ -583,7 +568,7 @@ PBE0 & 3.483 & 1.0 & -10.325 \\
 %\hline
 %\multicolumn{5}{c}{Pseudo-Systems} \\
 %\hline\hline
-\multicolumn{2}{c}{Reference Values} & -3.533 & -9.091 & -10.363 \\
+\multicolumn{2}{c}{\textit{Reference Values}} & -3.533 & -9.091 & -10.363 \\
 \hline
 \multicolumn{5}{c}{\(p\)-coefficient -3.267; \(p\)-exponent 0.295} \\
 \hline
@@ -603,30 +588,16 @@ PBE0 & 3.483 & 1.0 & -10.325 \\
 
 Taking these new potentials we test them against a series of chain alkenes up to length C\(_{12}\), using a variety of functionals. In each case, the geometry of the reference system is optimised according to the method used, before taking the reference geometry and applying the pseudo-potentials from Table \ref{table:ethene_excitations}, optimised for ethene under HF. Figures \ref{fig:alkenes_hf_dft} and \ref{fig:alkenes_tddft} show the results. Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing ionisation and excitation energies seen in the reference systems seems to be well replicated by the pseudo-alkenes, with the energies following the same gradient.
 
-Also compared are TD-DFT results for this system and results of a previous work of some of us, which match to within 3\%.
+Also compared are TD-DFT results for this system and results of a previous work of some of the authors, which match to within 3\%.
 It seems the previous results have been accurately replicated.\cite{drujon_pseudopotentials_2013}
-Let us remind here that unlike in our previous work
-the potentials optimized in this article are fully defined by the position
+Let us recall here that, unlike in our previous work,
+the potentials optimised in this article are fully defined by the position
 of the pseudo-atom: no potentials are placed at the center of any bond.
 
 \begin{figure}[h]
-% \includegraphics[width=8cm]{hf_homo}
 \includegraphics[width=8cm]{pbe0_homo}
-% \includegraphics[width=8cm]{hf_ionisation}
 \includegraphics[width=8cm]{pbe0_ionisation}
-% \includegraphics[width=8cm]{hf_excitation}
 \includegraphics[width=8cm]{pbe0_excitation}
-%\includegraphics[width=8cm]{pbe_homo}
-% \includegraphics[width=8cm]{tpss_homo}
-%\end{figure}
-%\begin{figure}[h]
-%\includegraphics[width=8cm]{pbe_ionisation}
-%\includegraphics[width=8cm]{tpss_ionisation}
-%\includegraphics[width=8cm]{pbe_excitation}
-%\includegraphics[width=8cm]{tpss_excitation}
-%\includegraphics[width=8cm]{tpssh_homo}
-%\includegraphics[width=8cm]{tpssh_ionisation}
-%\includegraphics[width=8cm]{tpssh_excitation}
 \caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes and computational methods.}
 \label{fig:alkenes_hf_dft}
 \end{figure}
@@ -650,6 +621,7 @@ Mean Singlet HOMO error (\%) & 1.3 & 4.0 & 8.5 & 12.0 & 9.7 & - \\
 \end{tabular}
 \label{table:alkene_errors}
 \end{table}
+
 
 \subsection{Large Systems}
 
@@ -692,6 +664,7 @@ Table \ref{table:long_alkene_errors} gives the same energy details for longer ch
 \includegraphics[width=8cm]{ring_pbe0_excitation}
 \includegraphics[width=8cm]{ring_pbe0_ionisation}
 \includegraphics[width=8cm]{ring_pbe0_homo}
+\includegraphics[width=8cm]{ring_tddft_excitation}
 %\includegraphics[width=8cm]{ring_pbe_excitation}
 %\includegraphics[width=8cm]{ring_pbe_ionisation}
 %\includegraphics[width=8cm]{ring_pbe_homo}
