--- a/main.tex
+++ b/main.tex
@@ -205,7 +205,7 @@ To take into account the fact that dormant electrons are removed from the
 system, the nuclear charge is modified by the $Z_c$ value.
 Yet, as the effective charge felt by the active electrons is likely not to be an integer,
 the modification of the value of the nuclear charge is scaled in $\hat{V}$.
-In this operator we notice that the \(r^{n}\) behavior is mantained for the first term 
+In this operator we notice that the \(r^{-1}\) behavior is mantained for the first term 
 (the Coulomb one).
 
 %Let us follow Huzinaga in his enlightening work.\cite{huzinaga_effective_1991}
