correction structure and title section 2.1

--- a/main.tex
+++ b/main.tex
@@ -275,7 +275,7 @@ This supplementary constraint will be fulfilled by strategically positioning the
 we intend to use. 
 
 Pseudo-potentials for hybridised carbon
-atoms have been already succesfully extracted in a previous work of ours.\cite{drujon_pseudopotentials_2013}
+atoms have been already successfully extracted in a previous work of ours.\cite{drujon_pseudopotentials_2013}
 There, our attention was focused on the 'no-collapse' term, and 
 functions in the pseudo-potential shift up unwanted orbitals and correctly place the energy of the
 wanted orbitals.
@@ -296,11 +296,12 @@ This article is structured as follows.
 In the first part, the method is defined in detail.
 The second part shows the results obtained, from the most crude to the most refined
 version of the method.
-These are analyzed in the third part.
+The extracted pseudopotentials are then employed for extended systems.
+Perspectives are presented in the conclusion.
 
 \section{Method}
 
-\subsection{Potentials \& Potential Geometry}
+\subsection{Pseudopotential definition}
 
 As in our previous work\cite{drujon_pseudopotentials_2013},
 we take CH\(^{\bullet}_{3}\) as our starting system to be reproduced.
