--- a/main.tex
+++ b/main.tex
@@ -308,8 +308,8 @@ we take CH\(^{\bullet}_{3}\) as our starting system to be reproduced.
 It is the smallest system containing one and only one sp$^2$ hybridized carbon atom.
 This choice allows us to isolate the different electrostatic interactions
 to build a physically meaningful model.
-In order to fulfil the criteria specified in Equation (\ref{eq:atomicHamiltonian}),
-we make use of two kinds of Gaussian pseudo-potentials \cite{me_structure_theory}, of \(s\) and \(p\) shapes. As we want to avoid modifying the quantum chemistry software itself, the pseudo-potentials have a semi-local form and we choose a value of \(n = 1\) to preserve the \(1/r\) behaviour as in Huzinanaga's work.
+%In order to fulfil the criteria specified in Equation (\ref{eq:atomicHamiltonian}),
+We make use of two kinds of Gaussian pseudo-potentials \cite{me_structure_theory}, of \(s\) and \(p\) shapes. As we want to avoid modifying the quantum chemistry software itself, the pseudo-potentials have a semi-local form and we choose a value of \(n = 1\) to preserve the \(1/r\) behaviour as in Huzinanaga's work.
 The multi-centered pseudo-potentials that we build read as follows:
 \begin{equation}
 \label{eq:ourPP}
