--- a/main.tex
+++ b/main.tex
@@ -388,7 +388,7 @@ Next, we need to find a value for \( \langle r \rangle \). We can do this by cal
 
  where \(\psi_{p_{z}}\) are the molecular orbitals extracted from a reference calculation of CH\(^{\bullet}_{3}\). From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). Even if we shall use the semi-local pseudo-potential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
 \begin{equation}
-S = \langle \phi_{p_{z}} | \chi \rangle
+S = \langle \psi_{p_{z}} | \chi \rangle
 \end{equation}
 the overlap between a molecular orbital \(\phi_{p_{z}}\), and \(\chi\), taken from our non-local pseudo-potential definition \cite{huzinaga_effective_1991}
 \begin{equation}
@@ -396,7 +396,7 @@ the overlap between a molecular orbital \(\phi_{p_{z}}\), and \(\chi\), taken fr
 \end{equation}
 leading us to
 \begin{equation}
-\langle \widehat{Z} \rangle = \langle \phi_{p_{z}} | \widehat{Z} | \phi_{p_{z}} \rangle = \langle \phi_{p_{z}} | Z_{pseudo} | \chi \rangle \langle \chi | \phi_{p_{z}} \rangle = Z_{pseudo} S^{2}
+\langle \widehat{Z} \rangle = \langle \psi_{p_{z}} | \widehat{Z} | \psi_{p_{z}} \rangle = \langle \psi_{p_{z}} | Z_{pseudo} | \chi \rangle \langle \chi | \psi_{p_{z}} \rangle = Z_{pseudo} S^{2}
 \end{equation}
 Finally, knowing that our hydrogen-like pseudo-system already contains a charge, \(Z_{nucleus}\), of one we subtract this from the desired \(Z_{eff}\) we want to influence our \(p_{z}\) electron, leaving us with
 \begin{equation}
