--- a/main.tex
+++ b/main.tex
@@ -390,7 +390,7 @@ Next, we need to find a value for \( \langle r \rangle \). We can do this by cal
 \begin{equation}
 S = \langle \psi_{p_{z}} | \chi \rangle
 \end{equation}
-the overlap between a molecular orbital \(\phi_{p_{z}}\), and \(\chi\), taken from our non-local pseudo-potential definition \cite{huzinaga_effective_1991}
+the overlap between a molecular orbital \(\psi_{p_{z}}\), and \(\chi\), taken from our non-local pseudo-potential definition \cite{huzinaga_effective_1991}
 \begin{equation}
 \chi = e^{-\alpha r^{2}},\qquad \widehat{p} = Z_{pseudo} | \chi \rangle \langle \chi |
 \end{equation}
