--- a/main.tex
+++ b/main.tex
@@ -505,7 +505,8 @@ Next, we take some of these potentials to create a pseudo-ethene system, with th
 %\end{table}
 
 \begin{table}[ht]
-\caption{Reference values and optimised values for pseudo-ethene using only \(s\)-potentials with an exponent of 10.0. The pseudo-ethene is optimised to give the all-electron HOMO reference energies in Table \ref{table:ethene_s_pseudo}.}
+\caption{HOMO energies for ethene and pseudo-ethene. The pseudo-potentials used in the pseudo-ethene are taken from optimised values for 
+pseudo-CH\(^{\bullet}_{3}\) with only \(s\)-potentials and an exponent of 10.0.}
 \begin{tabular}{c c c c}
 \hline
 %\multicolumn{3}{c}{Reference} \\
