Added brief suppmat description

--- a/main.tex
+++ b/main.tex
@@ -812,8 +812,10 @@ publications, refer to the journal's Instructions for Authors.
 
 The following files are available free of charge.
 \begin{itemize}
-  \item Filename: brief description
-  \item Filename: brief description
+  \item Results \& Graphs.ods: Complete results of calculations and associated graphs.
+  \item Calculations folder: Contains all calculations used to generate the results in "Results \& Graphs.ods", ordered by molecule
+  shape, all-electron/pseudo-molecular calculation and functional/method.
+  \item chem_scripts folder: Contains original scripts used to place and optimise pseudo-potentials.
 \end{itemize}
 
 \end{suppinfo}
